plugins {
    id 'java'
}

group = 'de.harich.thilo'
version = '1.0-SNAPSHOT'

// Nutze Java 21 für die besten AVX-512 Features
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Das eigentliche JUnit 5 API
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    // Die Engine, die die Tests ausführt
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'

    // Falls du auch Parameterized Tests oder ähnliches nutzt:
//    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.0'
}

// Ermöglicht die Nutzung der Vector-API für AVX-512
tasks.withType(JavaCompile).configureEach {
//    options.compilerArgs << "--add-modules=jdk.incubator.vector"
}

tasks.withType(JavaExec).configureEach {
//    jvmArgs += ["--add-modules=jdk.incubator.vector"]
}

test {
    useJUnitPlatform()
    // Die Test-Worker-Prozesse von Gradle brauchen das Modul ebenfalls
//    jvmArgs += ["--add-modules", "jdk.incubator.vector"]
}